completed Ready to Join Section

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-  <header class="container">
-    <!-- <h1 class="fs-1">Gratis Tech</h1> -->
+  <header class="container mb-5">
+    <!-- navbar -->
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
         <a class="navbar-brand fs-1 fw-bold me-5" href="#">Gratis Tech</a>
@@ -59,7 +59,8 @@
           <img src="images/cover/cover-1.png" class="d-block w-100 rounded-1" alt="...">
           <div class="carousel-caption d-none d-md-block text-white">
             <h2 class="fs-1">Learn the skills of the future</h2>
-            <p>Accelerate your career or business with an online digital skills course in everything from marketing to coding and beyond.</p>
+            <p>Accelerate your career or business with an online digital skills course in everything from marketing to
+              coding and beyond.</p>
             <button class="btn btn-primary fw-bold">Let's Start</button>
           </div>
         </div>
@@ -67,7 +68,8 @@
           <img src="images/cover/cover-2.jpg" class="d-block w-100 rounded-1" alt="...">
           <div class="carousel-caption d-none d-md-block text-white">
             <h2 class="fs-1">Did you know we also have webinars?</h2>
-            <p>Online sessions designed to help you develop skills in less than an hour. You can watch webinars live or register to take part in what is coming up.</p>
+            <p>Online sessions designed to help you develop skills in less than an hour. You can watch webinars live or
+              register to take part in what is coming up.</p>
             <button class="btn btn-primary fw-bold">Let's Start</button>
           </div>
         </div>
@@ -75,7 +77,8 @@
           <img src="images/cover/cover-3.jpg" class="d-block w-100 rounded-1" alt="...">
           <div class="carousel-caption d-none d-md-block text-white">
             <h2 class="fs-1">Do things you never thought possible</h2>
-            <p>Discover courses in topics designed to help expand your career, business and horizons and to upgrade your skills for a new digital world.</p>
+            <p>Discover courses in topics designed to help expand your career, business and horizons and to upgrade your
+              skills for a new digital world.</p>
             <button class="btn btn-primary fw-bold">Let's Start</button>
           </div>
         </div>
@@ -90,8 +93,213 @@
       </button>
     </div>
   </header>
-  <main>
+  <main class="container mb-5">
+    <!-- Our Courses Section -->
+    <section class="mb-5">
+      <div class="text-center">
+        <h2>Our Online Courses</h2>
+        <p>Discover a range of free learning content designed to help your business or in your career. You can learn by
+          selecting individual modules, or dive right in and take an entire course end-to-end.
+        </p>
+      </div>
+      <!-- course items -->
+      <div>
+        <div class="row row-cols-lg-2 row-cols-sm-1">
+          <div class="mb-2">
+            <div class="card mb-3">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Fundamental Of UI/UX</h5>
+                    <p class="card-text">The UI/UX Design Specialization brings a design-centric approach to user
+                      interface and user experience</p>
 
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="mb-2">
+            <div class="card mb-3">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Javascript Basic to advanced</h5>
+                    <p class="card-text">A perfect JavaScript course for all those who want to learn and master
+                      JavaScript programming skills right</p>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="mb-2">
+            <div class="card mb-3">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Fullstack Web Development</h5>
+                    <p class="card-text">You'll learn the latest website coding skills from real-world programmers.
+                      Whether youre beginner or advanced</p>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="mb-2">
+            <div class="card mb-3">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Digital Marketing</h5>
+                    <p class="card-text">Master Digital Marketing Strategy, Social Media Marketing, SEO, YouTube, Email,
+                      Facebook Marketing</p>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="mb-2">
+            <div class="card mb-3">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Photography Fundamentals</h5>
+                    <p class="card-text">Learn the exposure triangle (aperture, shutter speed, ISO) and basic
+                      composition rules in this easy</p>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="mb-2">
+            <div class="card mb-3">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Motion Graphics courses</h5>
+                    <p class="card-text">Whether you’re interested in creating motion graphics for an upcoming
+                      presentation on data analysis</p>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <!-- View all button -->
+        <div class="text-center">
+          <button class="btn btn-primary fw-bold">View All</button>
+        </div>
+      </div>
+    </section>
+    <!-- Ready to Join Section -->
+    <section class="mb-5">
+      <div>
+        <div class="mb-2">
+          <div class="bg-primary card mb-3">
+            <div class="row g-0 my-4 ps-5">
+              <div class="col-lg-6 col-md-12">
+                <div class="card-body text-white">
+                  <h5 class="card-title">Ready to join?</h5>
+                  <p class="card-text">Start, switch, or advance your career with more than 5,000 courses, Professional
+                    Certificates, and degrees from world-class universities and companies.</p>
+                </div>
+              </div>
+              <!-- SignUp button -->
+              <div class="col-lg-6 col-md-12">
+                <div class="h-100 d-flex justify-content-center align-items-center">
+                  <div>
+
+
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-primary bg-white text-primary px-5" data-bs-toggle="modal"
+                      data-bs-target="#exampleModal">
+                      SignUp
+                    </button>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                      aria-hidden="true">
+                      <div class="modal-dialog  modal-dialog-centered">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <!-- modal body -->
+                          <div class="modal-body">
+                            <div class="container">
+                              <div class="">
+                                <div class="d-flex flex-column justify-content-center align-items-center">
+                                  <h3 class="my-3">Please Sign Up</h3>
+                                  <form action="">
+                                    <div class="form-floating mb-3">
+                                      <input type="email" class="form-control" id="floatingInput"
+                                        placeholder="name@example.com">
+                                      <label for="floatingInput">Email address</label>
+                                    </div>
+                                    <div class="form-floating mb-3">
+                                      <input type="password" class="form-control" id="floatingPassword"
+                                        placeholder="Password">
+                                      <label for="floatingPassword">Password</label>
+                                    </div>
+                                    <select class="form-select mb-3" aria-label="Default select example">
+                                      <option selected>Please select one</option>
+                                      <option value="male">Man</option>
+                                      <option value="female">Women</option>
+                                      <option value="secret">Do not share</option>
+                                    </select>
+                                    <div class="form-check mb-3">
+                                      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                      <label class="form-check-label" for="flexCheckDefault">
+                                        Accept our <a href="">Terms And Condition</a>
+                                      </label>
+                                    </div>
+                                    <input class="btn btn-outline-primary" type="submit" value="SignUp">
+                                  </form>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
 
