--- a/index.html
+++ b/index.html
@@ -300,6 +300,72 @@
         </div>
       </div>
     </section>
+    <!-- Frequently Asked Wuestions Section -->
+    <section class="mb-5">
+      <div class="text-center">
+        <h2>Frequently Asked Questions</h2>
+        <p>Planning your presentation can help your delivery appear more natural and engaging.
+          Learn how different storytelling techniques, presentation materials, and delivery styles can improve how you
+          give presentations to others.</p>
+      </div>
+      <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+              aria-expanded="true" aria-controls="collapseOne">What is the difference between Flexbox and CSS Grid?
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+            data-bs-parent="#accordionExample">
+            <div class="accordion-body">CSS Grid and Flexbox are layout models that share similarities and can be used
+              together. The key difference is that CSS Grid can be used to create two-dimensional layouts, while Flexbox
+              can only be used to create one-dimensional layouts.</div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">What is the diference
+              between Bootstrap and Tailwind?
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+            data-bs-parent="#accordionExample">
+            <div class="accordion-body">Bootstrap comes with a set of pre-styled responsive, mobile-first components
+              that possess a definite UI kit. Tailwind CSS uses a set of utility classes to create a neat UI with more
+              flexibility and uniqueness. Sites created using Bootstrap follow the generic pattern that makes them look
+              identical.</div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">What is CSS box model?
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+            data-bs-parent="#accordionExample">
+            <div class="accordion-body">In CSS, the term "box model" is used when talking about design and layout. The
+              CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders,
+              padding, and the actual content.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingFour">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">What is Semantic tag?
+            </button>
+          </h2>
+          <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+            data-bs-parent="#accordionExample">
+            <div class="accordion-body">The HTML semantics refers to the tags that provide meaning to an HTML page
+              rather than just presentation. It makes HTML more comprehensible by better defining the different sections
+              and layout of web pages.</div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
 
