complete Trusted by over 800+ companies section with d-none condition

--- a/index.html
+++ b/index.html
@@ -366,6 +366,20 @@
         </div>
       </div>
     </section>
+    <!-- Trusted by over 800+ companies Section -->
+    <section class="d-none d-lg-block mb-5">
+      <div class="text-center">
+        <h2>Trusted by over 800+ companies</h2>
+      </div>
+      <div class="d-flex justify-content-center">
+        <div class="m-2 p-2"><img src="images/company/company-1.png" alt="" class="img-fluid"></div>
+        <div class="m-2 p-2"><img src="images/company/company-2.png" alt="" class="img-fluid"></div>
+        <div class="m-2 p-2"><img src="images/company/company-3.png" alt="" class="img-fluid"></div>
+        <div class="m-2 p-2"><img src="images/company/company-4.png" alt="" class="img-fluid"></div>
+        <div class="m-2 p-2"><img src="images/company/company-5.png" alt="" class="img-fluid"></div>
+        <div class="m-2 p-2"><img src="images/company/company-6.png" alt="" class="img-fluid"></div>
+      </div>
+    </section>
   </main>
   <footer>
 
