--- a/index.html
+++ b/index.html
@@ -381,8 +381,17 @@
       </div>
     </section>
   </main>
+  <!-- footer -->
   <footer>
-
+    <div class="bg-black text-white text-center py-5">
+      <h4>Gratis Tech</h4>
+      <address>
+        Office 41, Zawaya Buildin, Ghala Muscat,
+        Sultanate of Oman
+      </address>
+      <p><small>Privacy Policy | Terms of use</small></p>
+      <p class="fs-3"><i class="fab px-3 fa-instagram"></i> <i class="fab px-3 fa-twitter"></i> <i class="fab px-3 fa-youtube"></i></p>
+    </div>
   </footer>
 
   <!-- Bootstrap script -->
