--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-primary bg-white text-primary px-5" data-bs-toggle="modal"
                       data-bs-target="#exampleModal">
-                      SignUp
+                      Register Now
                     </button>
 
                     <!-- Modal -->
@@ -383,7 +383,7 @@
   </main>
   <!-- footer -->
   <footer>
-    <div class="bg-black text-white text-center py-5">
+    <div class="bg-black text-white text-center pt-5 pb-4">
       <h4>Gratis Tech</h4>
       <address>
         Office 41, Zawaya Buildin, Ghala Muscat,
