--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 
 <body>
-  <header class="container mb-5">
+  <header class="container mb-4 pt-3">
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg bg-light pb-4">
       <div class="container-fluid">
         <a class="navbar-brand fs-1 fw-bold me-5" href="#">Gratis Tech</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -93,9 +93,9 @@
       </button>
     </div>
   </header>
-  <main class="container mb-5">
+  <main class="container mb-5 pt-5">
     <!-- Our Courses Section -->
-    <section class="mb-5">
+    <section class="mb-5 pb-5">
       <div class="text-center">
         <h2>Our Online Courses</h2>
         <p>Discover a range of free learning content designed to help your business or in your career. You can learn by
@@ -216,7 +216,7 @@
       </div>
     </section>
     <!-- Ready to Join Section -->
-    <section class="mb-5">
+    <section class="mb-5 pb-3">
       <div>
         <div class="mb-2">
           <div class="bg-primary card mb-3">
@@ -301,7 +301,7 @@
       </div>
     </section>
     <!-- Frequently Asked Wuestions Section -->
-    <section class="mb-5">
+    <section class="mb-5 pb-5">
       <div class="text-center">
         <h2>Frequently Asked Questions</h2>
         <p>Planning your presentation can help your delivery appear more natural and engaging.
@@ -367,7 +367,7 @@
       </div>
     </section>
     <!-- Trusted by over 800+ companies Section -->
-    <section class="d-none d-lg-block mb-5">
+    <section class="d-none d-lg-block mb-5 pb-4">
       <div class="text-center">
         <h2>Trusted by over 800+ companies</h2>
       </div>
